--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "serverless offline --stage dev",
+    "dev": "nodemon --exec \"serverless offline start --stage dev\" --watch src/*",
     "deploy": "serverless deploy --stage prod --region us-east-2",
     "remove": "serverless remove --stage prod --region us-east-2"
   },
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "drizzle-kit": "^0.31.4",
+    "nodemon": "^3.1.10",
     "serverless-offline": "^14.4.0",
     "typescript": "^5.8.3"
   }
